gccida/c3/process_init_element
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:6995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:6998:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7010:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7024:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7025:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7026:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7027:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7029:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7031:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *range_end; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7032:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7033:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7035:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *index; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7037:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7056:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v4 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7057:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7060:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v4 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7074:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7082:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->implicit ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:7095:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->implicit ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/process_init_element/src/obj/c-typeck.o] Error 1
